validateurs login sign-up + integration login

--- a/src/app/components/landing_page/home/home.component.html
+++ b/src/app/components/landing_page/home/home.component.html
@@ -1,1 +1,82 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+	<script src="https://kit.fontawesome.com/7494bdcbe4.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Roboto&display=swap" rel="stylesheet">
+	<title>index</title>
+</head>
+<body>
+<!-- First section Showcase -->
+	<section class="showcase">
+		<div class="showcase-container">
+			<header id="login-anchor">
+				<div class="logo">
+					<p>I C U</p>
+				</div>
+				<app-login></app-login>
+			</header>
+			<section class="showcase-content">
+				<article>
+					<h1>Make your business easier</h1>
+					<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				<app-sign-up></app-sign-up>
+				</article>
+				<figure>
+					<img src="./../../../../assets/image.png" alt="image de front">
+				</figure>
+			</section>
+		</div>
+    </section>
+    
+
+
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+	<footer>
+		<div class="footer-container">
+			<div>
+				<h1>ABOUT</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto corporis eum, expedita harum hic illum ipsa iusto minima mollitia</p>
+			</div>
+			<div>
+				<h1>Quick Links</h1>
+				<ul>
+					<li><a href="#">Link1</a></li>
+					<li><a href="#">Link2</a></li>
+					<li><a href="#">Link3</a></li>
+					<li><a href="#">Link4</a></li>
+				</ul>
+			</div>
+			<div>
+				<h1>Informations</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto corporis eum, expedita harum hic illum ipsa iusto minima mollitia</p>
+			</div>
+			<div>
+				<h1>Contact</h1>
+				<ul>
+					<li><i class="fa fa-map-marker" aria-hidden="true"></i>Tunis , Beb swika 1919</li>
+					<li><i class="fa fa-phone" aria-hidden="true"></i>123456789</li>
+					<li><i class="fa fa-envelope" aria-hidden="true"></i>suppt@gmail.come</li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<p>Copyright &copy 2020 ALL rights reserved</p>
+		</div>
+	</footer>
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
+</html>
