--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+
+            <form class="login-form" [formGroup]="loginform" (ngSubmit)=login()>
+              <input type="text" name="user-account" placeholder="username Or email" name="username" formControlName="username">
+              
+              <input type="password" name="psw" placeholder="password" name="password" formControlName="password">
+              <div class="alert alert-warning" *ngIf="password.touched && password.invalid">
+                <div *ngIf=password.errors.required> a password is required</div>
+                <div *ngIf=password.errors.minlength> password must have at least 6 letter</div>
+        
+              </div>
+              <input type="submit" name="login-submit" class="login-submit">
+          </form>
+      
