Add profile side bar information, and collabs, archive, favorits, projects components and add routs and routerlinks in pages

--- a/src/app/components/user-profile/profile/archive/archive.component.html
+++ b/src/app/components/user-profile/profile/archive/archive.component.html
@@ -1,1 +1,6 @@
-<p>archive works!</p>
+<div class="container">
+    <div class="row justify-content-center align-items-center ml-5">
+    <p>archive works!</p>
+</div>
+</div>
+
