--- a/src/app/components/user-profile/profile/navbar-secondary/navbar-secondary.component.html
+++ b/src/app/components/user-profile/profile/navbar-secondary/navbar-secondary.component.html
@@ -5,7 +5,7 @@
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item mg-5">
-                <a class="nav-link" href="#">
+                <a class="nav-link" [routerLink]="['project']" routerLinkActive="active">
                     PROJECT
                     <i class="">
                     <span class="">11</span>
@@ -13,7 +13,7 @@
                 </a>
               </li>
             <li class="nav-item mg-5">
-                <a class="nav-link" href="#">
+                <a class="nav-link" [routerLink]="['collabs']" routerLinkActive="active">
                     COLLABS
                     <i class="">
                     <span class="">11</span>
@@ -21,7 +21,7 @@
                 </a>
               </li>
               <li class="nav-item mg-5">
-                <a class="nav-link" href="#">
+                <a class="nav-link" [routerLink]="['favorits']" routerLinkActive="active">
                     FAVORITS
                     <i class="">
                     <span class="">11</span>
@@ -29,7 +29,7 @@
                 </a>
               </li>
             <li class="nav-item mg-5">
-                <a class="nav-link" href="#">
+                <a class="nav-link" [routerLink]="['archive']" routerLinkActive="active">
                     ARCHIVE
                     <i class="">
                     <span class="">11</span>
