add content project

--- a/src/app/components/user-profile/profile/collabs/collabs.component.html
+++ b/src/app/components/user-profile/profile/collabs/collabs.component.html
@@ -1,3 +1,5 @@
 <div class="container">
         <p>collabs works!</p>
+        <app-profile-information-sidebar></app-profile-information-sidebar>
+
 </div>
