--- a/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
+++ b/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
@@ -1,7 +1,4 @@
-<div class="">
-        <div class="sidebar">
-            <div class="row justify-content-left align-items-left ml-5">
-                <div class="col-12 col-sm-8 col-md-12 col-lg-3">
+<div class="sidebar">
                     <div class="profile-card py-3 card text-center">
                         <div class="card-body py-2">
                             <img class="profile-picture rounded-circle" src="../../../../../assets/images/profile.jpg" class="rounded-circle z-depth-0 img-taille" />
@@ -31,3 +28,4 @@
                           
                         </div>
                     </div>
+                </div>
