--- a/src/app/components/user-profile/profile/collabs/collabs.component.html
+++ b/src/app/components/user-profile/profile/collabs/collabs.component.html
@@ -1,13 +1,13 @@
 <div class="container">
                 <div class="row">
-            
                     <div class="col-4">
-                
                     <app-profile-information-sidebar></app-profile-information-sidebar>
-            </div>
+                </div>
             <div class="col-8">
-            <h4> Collabs !</h4>
-                <div class="card">
+            <h4> Colabs !</h4>
+            <div class="row">
+                    <div class="col-4">
+            <div class="card">
                         <img class="card-img-top img-fluid" src="../../../../../assets/images/c1.jpg" alt="Card image cap">
                         <div class="card-body">
                           <hr class="divider danger my-2">
@@ -15,6 +15,8 @@
                           <p class="card-text ct">Description du Projet 1</p>
                         </div>
                     </div>
+                    </div>
+                    <div class="col-4">
                     <div class="card">
                             <img class="card-img-top img-fluid" src="../../../../../assets/images/c2.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -23,6 +25,8 @@
                               <p class="card-text ct">Description du Projet 2</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-4">
                         <div class="card">
                                 <img class="card-img-top img-fluid" src="../../../../../assets/images/c3.jpg" alt="Card image cap">
                                 <div class="card-body">
@@ -31,6 +35,10 @@
                                   <p class="card-text ct">Description du Projet 3</p>
                                 </div>
                             </div>   
+                    </div>
+                </div>  
+        <div class="row">
+                    <div class="col-4">
                             <div class="card">
                                     <img class="card-img-top img-fluid" src="../../../../../assets/images/c4.jpg" alt="Card image cap">
                                     <div class="card-body">
@@ -38,7 +46,10 @@
                                       <h4 class="card-title">Projet 4</h4>                  
                                       <p class="card-text ct">Description du Projet 4</p>
                                     </div>
-                                </div>   
+                                </div>
+                                </div>
+                                <div class="col-4">
+                     
                                 <div class="card">
                                         <img class="card-img-top img-fluid" src="../../../../../assets/images/c5.jpg" alt="Card image cap">
                                         <div class="card-body">
@@ -46,7 +57,10 @@
                                           <h4 class="card-title">Projet 5</h4>                  
                                           <p class="card-text ct">Description du Projet 5</p>
                                         </div>
-                                    </div>   
+                                    </div>
+                                    </div>
+                                    <div class="col-4">
+                                           
                                     <div class="card">
                                             <img class="card-img-top img-fluid" src="../../../../../assets/images/c6.jpg" alt="Card image cap">
                                             <div class="card-body">
@@ -54,7 +68,12 @@
                                               <h4 class="card-title">Projet 6</h4>                  
                                               <p class="card-text ct">Description du Projet 6</p>
                                             </div>
-                                        </div>   
+                                        </div> 
+                                        </div>
+        </div>
+        <div class="row">
+                <div class="col-4">
+        
                                         <div class="card">
                                                 <img class="card-img-top img-fluid" src="../../../../../assets/images//c7.jpg" alt="Card image cap">
                                                 <div class="card-body">
@@ -62,7 +81,10 @@
                                                   <h4 class="card-title">Projet 7</h4>                  
                                                   <p class="card-text ct">Description du Projet 7</p>
                                                 </div>
-                                            </div>   
+                                            </div>
+                                            </div> 
+                                            
+                <div class="col-4">  
                                             <div class="card">
                                                     <img class="card-img-top img-fluid" src="../../../../../assets/images/c8.jpg" alt="Card image cap">
                                                     <div class="card-body">
@@ -70,7 +92,10 @@
                                                       <h4 class="card-title">Projet 8</h4>                  
                                                       <p class="card-text ct">Description du Projet 8</p>
                                                     </div>
-                                                </div>   
+                                                </div> 
+                                                </div>
+                                                
+                <div class="col-4">  
                                                 <div class="card">
                                                         <img class="card-img-top img-fluid" src="../../../../../assets/images/c9.jpg" alt="Card image cap">
                                                         <div class="card-body">
@@ -79,7 +104,11 @@
                                                           <p class="card-text ct">Description du Projet 9</p>
                                                         </div>
                                                     </div>                              
-                                                    <div class="card">
+                                   </div>
+        </div>
+        <div class="row">
+                <div class="col-4">
+                                                        <div class="card">
                                                             <img class="card-img-top img-fluid" src="../../../../../assets/images/c10.jpg" alt="Card image cap">
                                                             <div class="card-body">
                                                               <hr class="divider danger my-2">
@@ -87,6 +116,9 @@
                                                               <p class="card-text ct">Description du Projet 10</p>
                                                             </div>
                                                         </div>   
+                         </div>
+                         
+                <div class="col-4">
                                                         <div class="card">
                                                                 <img class="card-img-top img-fluid" src="../../../../../assets/images/c11.jpg" alt="Card image cap">
                                                                 <div class="card-body">
@@ -94,9 +126,33 @@
                                                                   <h4 class="card-title">Projet 11</h4>                  
                                                                   <p class="card-text ct">Description du Projet 11</p>
                                                                 </div>
+           
                                                             </div>   
-            </div>
-            
+           
+                                                        </div>
+                                                        <div class="col-4">
+                                                                <div class="card">
+                                                                        <img class="card-img-top img-fluid" src="../../../../../assets/images/c12.jpg" alt="Card image cap">
+                                                                        <div class="card-body">
+                                                                          <hr class="divider danger my-2">
+                                                                          <h4 class="card-title">Projet 12</h4>                  
+                                                                          <p class="card-text ct">Description du Projet 12</p>
+                                                                        </div>
+                   
+                                                                    </div>   
+                   
+                                                                </div>
+                                                        </div>
+                                                        <div class="card">
+                                                                <img class="card-img-top img-fluid" src="../../../../../assets/images/c13.png" alt="Card image cap">
+                                                                <div class="card-body">
+                                                                  <hr class="divider danger my-2">
+                                                                  <h4 class="card-title">Projet 13</h4>                  
+                                                                  <p class="card-text ct">Description du Projet 13</p>
+                                                                </div>
+           
+                                                            </div>   
+           </div> 
             </div>
             </div>
             
