update-profile angular, fix navbar-probleme for add project, modifier app-routing, profile integration, create class UserProfile

--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -12,4 +12,5 @@
               <input type="submit" name="login-submit" class="login-submit" [disabled]="loginform.invalid" >
 
           </form>
+          <!-- <app-navbar-profile [u]='user'></app-navbar-profile> -->
       
