--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
@@ -115,8 +115,7 @@
 }
 
   .bg-pers{
-    background: rgb(116,168,255);
-    background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);
+        background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);
 }
   .img-taille{
     width: 50px;
@@ -172,3 +171,16 @@
   height: 30px;
   color: #efefef;
 }
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: .25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+}
+.capitalize { text-transform: capitalize; }
