--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngFor="let x of user">
       <ul class="navbar-nav mr-auto">
       </ul>
       <ul class="navbar-nav">
@@ -27,7 +27,7 @@
                   </li>
                   <!-- /search -->
                   <li class="nav-item active ml-5">
-                      <a class="nav-link" [routerLink]="['project']" routerLinkActive="active">
+                      <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active">
                         <i class="fa fa-home"></i>
                         Home
                         </a>
@@ -49,14 +49,14 @@
         <li class="nav-item avatar dropdown  ml-5">
             <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <img src="../../../../../assets/images/profile.jpg" class="rounded-circle z-depth-0 img-taille"
+              <img src="../../../../../assets/images/{{x.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
                 alt="avatar image">
             </a>
             <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
               aria-labelledby="navbarDropdownMenuLink-55">
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">Update Profile</a>
-              <a class="dropdown-item" href="#">Deconnect</a>
+              <a class="dropdown-item " [routerLink]="['user-project']" routerLinkActive="active"><span class="capitalize">{{x.firstName}} </span>Profile</a>
+              <a class="dropdown-item" [routerLink]="['update-profile']" routerLinkActive="active">Update Profile</a>
+              <a class="dropdown-item" [routerLink]="['']" routerLinkActive="active">Deconnect</a>
             </div>
           </li>
       </ul>
