--- a/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
+++ b/src/app/components/user-profile/profile/profile-information-sidebar/profile-information-sidebar.component.html
@@ -1,30 +1,27 @@
 <div class="sidebar">
                     <div class="profile-card py-3 card text-center">
-                        <div class="card-body py-2">
-                            <img class="profile-picture rounded-circle" src="../../../../../assets/images/profile.jpg" class="rounded-circle z-depth-0 img-taille" />
-                            <h2 class="text-black h5 font-weight-normal font-style-arial mt-4 mb-1">
-                                Wassim Slim
-                            </h2>
+                        <div class="card-body py-2" *ngFor="let x of user">
+                            <img class="profile-picture rounded-circle" src="../../../../../assets/images/{{x.profilePhoto}}" class="rounded-circle z-depth-0 img-taille" />
+                            <h2 class="text-black h5 font-weight-normal font-style-arial mt-4 mb-1 capitalize">
+                                {{x.firstName}}                            </h2>
                             <p class="text-muted font-weight-normal">
                                 designer
                                 <br>
-                                @wassim.slim
+                                @{{x.firstName}}{{x.lastName}} 
                             </p>
                           <div class="row">
-                            <a  class=" nav-link ml-2 col" href="#"> 
+                            <a  class=" nav-link ml-2 col"  href="{{x.url}}" target="_blank"> 
                                <i class="fa fa-facebook-official"></i>
                            </a>
-                           <a class="nav-link ml-2 col " href="#"> 
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
                         </div>
 
-                           <hr >
+                           <hr >                                
+
                             <h5 class="w 100 mb-1 pt-1 h6 text-muted text-left">ABOUT</h5>
                             <p class="px-2 mt-2 mb-2 text-muted text-left text-secondary">
-                                    Lorem ipsum dolor sit amet, sapien etiam, nunc amet dolor m wisi. Nulla wisi laoreet suspendisse integer vivamus elit eu mauris hendrerit facilisi, mi mattis pariatur aliquam pharetra eget.                            </p>
-
-                            <h6 class="mt-4 pt-3 mb-5 text-muted small font-weight-bold">MEMBER SINCE:NOVEMBER 15,2011</h6>
+                           {{x.bio}}
+                            <h6 class="mt-4 pt-3 mb-5 text-muted small font-weight-bold">MEMBER SINCE : {{x.created_at | date:'MMMM yyyy'}}
+                            </h6>
                           
                         </div>
                     </div>
