update navbar, update integration, error form group, and how to update image

--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngFor="let x of user">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto">
       </ul>
       <ul class="navbar-nav">
@@ -32,6 +32,12 @@
                         Home
                         </a>
                     </li>
+                    <li class="nav-item active ml-5">
+                      <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active">
+                        <i class="fa fa-plus"></i>
+                        Add Project
+                        </a>
+                    </li>
         
         <li class="nav-item avatar dropdown active  ml-5">
             <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -49,12 +55,12 @@
         <li class="nav-item avatar dropdown  ml-5">
             <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <img src="../../../../../assets/images/{{x.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
+              <img src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
                 alt="avatar image">
             </a>
             <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
               aria-labelledby="navbarDropdownMenuLink-55">
-              <a class="dropdown-item " [routerLink]="['user-project']" routerLinkActive="active"><span class="capitalize">{{x.firstName}} </span>Profile</a>
+              <a class="dropdown-item " [routerLink]="['user-project']" routerLinkActive="active"><span class="capitalize">{{user.firstName}} </span>Profile</a>
               <a class="dropdown-item" [routerLink]="['update-profile']" routerLinkActive="active">Update Profile</a>
               <a class="dropdown-item" [routerLink]="['']" routerLinkActive="active">Deconnect</a>
             </div>
