--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,97 +1,4 @@
-<style>
-    .header {
-        background-color:rgba(217, 217, 217, 0.5);
-        height:35px;
-        color:#2e4552cc;
-        border-width: 0 0 2.35px;
-        border-color: #b4b3b3;
-    }
-    textarea{ 
-        height:80px; 
-        min-height:80px;  
-        max-height:80px;
-      }
-      input , textarea{
-        outline: 0;
-        border-width: 0 0 2px;
-        border-color: #C8C8C8;
-      }
-      input:focus , textarea:focus{
-        outline: 0;
-        border-width: 0 0 2.35px;
-        border-color: #b4b3b3;
-      }
-      .cp-modal {
-        width: 45%;
-        margin: auto;
-      }
-      .profile-img{
-          width:48px;
-      }
-      .btn-secondary{
-          height:32px;
-          font-style:Roboto;
-          padding-top:4px;
-          border-radius:2px;
-          background:#D9D9D9;
-          color:#4B4F56;
-          font-size:90%;
-          font-weight:bold;
-          border:2px solid #66666641;
-      }
-      .btn-secondary:hover{
-        height:32px;
-        font-style:Roboto;
-        padding-top:4px;
-        border-radius:2px;
-        background:rgb(151, 151, 151);
-        color:#4B4F56;
-        font-size:90%;
-        font-weight:bold;
-        border:2.1px solid #66666654;
-    }
-    .btn-primary{
-        height:32px;
-        font-style:Roboto;
-        padding-top:4px;
-        border-radius:2px;
-        background:#699ACB;
-        color:rgba(255, 255, 255, 0.863);
-        font-size:90%;
-        font-weight:bold;
-        border:2px solid #66666641;
-        
-    }
-    .btn-primary:hover{
-        height:32px;
-        font-style:Roboto;
-        padding-top:4px;
-        border-radius:2px;
-        background:rgb(93, 140, 187);
-        color:#FFFFFF;
-        font-size:90%;
-        font-weight:bold;
-        border:2.1px solid #66666654;
-        
-    }
-    .btn-submit {
-        width:100px;
-    }
 
-      .btn-nrml {
-          width:125px;
-      }
-      .btn-logo{
-          height:28px;
-          margin-top:-5px;
-          margin-left:-20px;
-          margin-right:6px;
-      }
-      .content-frm {
-          height:200px;
-      }
-
-</style>
 <!--
 <div class="modal " id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
@@ -144,7 +51,7 @@
           </div>
           <div class="modal-body mx-1 pt-1 row">
             <div class="col-1 p-0 pt-3">
-                <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+                <img src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle profile-img"/>
             </div>
             <div class="col-11">
                 <div class="md-form mb-2">
