--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -27,7 +27,7 @@
                   </li>
                   <!-- /search -->
                   <li class="nav-item active ml-5">
-                      <a class="nav-link" [routerLink]="['project']" routerLinkActive="active">
+                      <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active">
                         <i class="fa fa-home"></i>
                         Home
                         </a>
@@ -65,4 +65,3 @@
   </nav>
   <app-navbar-secondary></app-navbar-secondary>
   <router-outlet></router-outlet>
-  <app-profile-information-sidebar></app-profile-information-sidebar>
