--- a/src/app/components/Project/projects/projects.component.html
+++ b/src/app/components/Project/projects/projects.component.html
@@ -12,7 +12,7 @@
           <div class="modal-body mx-1 pt-1 row">
               
             <div class="col-1 p-0 pt-3">
-                <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+                <img src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle profile-img"/>
             </div>
             
             <div class="col-11">
