publish project integration 2

--- a/src/app/components/Project/projects/projects.component.css
+++ b/src/app/components/Project/projects/projects.component.css
@@ -112,5 +112,10 @@ textarea{
 }
 
 .file-container {
-  width:80%;
+  width:78%;
+}
+
+.nav-cont {
+  width:100%;
+  border-top:1px solid #C8C8C8;
 }
