add restore psw + new psw

--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -1,5 +1,6 @@
 
             <form class="login-form" [formGroup]="loginform" (ngSubmit)="login()">
+                <div toastContainer></div>
               <input type="text" name="user-account" placeholder="username Or email" name="username" formControlName="username">
               
               <input type="password" name="psw" placeholder="password" name="password" formControlName="password">
