--- a/src/app/components/landing_page/new-password/new-password.component.html
+++ b/src/app/components/landing_page/new-password/new-password.component.html
@@ -1,26 +1,36 @@
-<!-- As a link -->
 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-pers">
-    <a class="navbar-brand" [routerLink]="['']" routerLinkActive="active"><img src="../../../../../assets/images/logo.PNG"
-        class="rounded-circle z-depth-0 img-taille" alt="avatar image"></a>
-  
-  </nav>
+  <a class="navbar-brand" [routerLink]="['']" routerLinkActive="active"><img src="../../../../../assets/images/logo.PNG"
+      class="rounded-circle z-depth-0 img-taille" alt="avatar image"></a>
+</nav>
+
   
   <div class="card" class="mx-auto mt-5"  style="width: 55rem;">
     <h5 class="card-header">Reset password</h5>
     <div class="card-body">
   
-      <form>
+      <form [formGroup]="newPassForm" (ngSubmit)="send()">
         <div class="form-group">
-            <label for="exampleInputPassword1">New Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="exampleInputPassword">New Password</label>
+            <input type="password" name="password" formControlName="password" class="password form-control"
+            placeholder="password" />
+
+          <div class="alert alert-warning" *ngIf="password.touched && password.invalid">
+            <div *ngIf=password.errors.required> a password is required</div>
+            <div *ngIf=password.errors.minlength> password must have at least 6 letter</div>
+
           </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Confirm Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
+          
+          
+            <label for="exampleInputPassword">Confirm Password</label>
+            
+            <input type="password" name="ConfirmPassword" formControlName="ConfirmPassword" class="password form-control"
+            placeholder="Confirm Password" />
+
+        </div>
+        
   
   
-        <button type="submit" class="mx-auto" class="btn btn-primary">Submit</button>
+        <input type="submit" value="Submit" class="btn btn-primary">
       </form>
   
   
