--- a/src/app/components/Project/projects/projects.component.html
+++ b/src/app/components/Project/projects/projects.component.html
@@ -1,4 +1,3 @@
-
 <div class="modal" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class=" cp-modal" role="document">
     <form [formGroup]="projectForm" (ngSubmit)="addProject()">
@@ -13,8 +12,8 @@
             <div class="modal-body mx-1 pt-1 row">
                 
               <div class="col-1 p-0 pt-3">
-                <!--src="../../../../../assets/images/{{ user.profilePhoto }}"-->
                 <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+                <!--<img src="../../../../../assets/images/{{ userProfile.profilePhoto }}" class="rounded-circle profile-img"/>-->
               </div>
               
               <div class="col-11">
@@ -53,7 +52,7 @@
                               <img src="../../../../../assets/images/filter.png" class="btn-logo"/>
                               Criterias
                           </div>
-                          <button type="submit" class="btn btn-primary btn-submit ml-2" [disabled]="projectForm.invalid">
+                          <button type="submit" class="btn btn-primary btn-submit ml-2" [disabled]="projectForm.invalid || invalid">
                             publish
                           </button>
                   </div>
@@ -72,7 +71,7 @@
                               <h6 class="modal-title font-weight-bold">Copy</h6>
                           </div>
                           <div class="fap-container">
-                              <textarea  name="text" formControlName="text" id="text" class="form-control-plaintext validate copy" placeholder="Copy content . . ."></textarea>
+                              <textarea  [value]="text" name="text" formControlName="text" id="text" class="form-control-plaintext validate copy" placeholder="Copy content . . ."></textarea>
                           </div>
                       </div>
                       </div>
@@ -83,7 +82,7 @@
                                 <h6 class="modal-title font-weight-bold">Media</h6>
                             </div>
                             <div class="custom-file mb-3 fap-container file-container mt-4">
-                                <input (change)="onSelectedFile($event)" type="file" class="custom-file-input" id="customFile" name="filename">
+                                <input  (change)="onSelectedFile($event)" type="file" class="custom-file-input" id="customFile" name="filename">
                                 <label class="custom-file-label form-control-plaintext inputFile mt-2" for="customFile" data-browse="File">    {{ progress != undefined ? progress+' % ' : ' . . .' }}</label>
                             </div> 
                         </div>
@@ -114,7 +113,7 @@
                                         </label>
                                       </div>
                                       <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="sex" formControlName="sex" id="rdb3" value="3" checked>
+                                        <input class="form-check-input" type="radio" name="sex" formControlName="sex" id="rdb3" value="3">
                                         <label class="form-check-label" for="rdb3">
                                           Both
                                         </label>
@@ -151,38 +150,47 @@
       </div>
   </div>
   
-    <div class="cp-modal mt-5" >
-      <div class="modal-content">
+    <div class="cp-modal mt-5">
+      <div data-toggle="modal" data-target="#modalLoginForm" class="modal-content">
         <div class="modal-header header p-1 pl-3">
           <h6 class="modal-title font-weight-bold">Create a new project</h6>
         </div>
         <div class="modal-body mx-1 pt-1 row">
           <div class="col-1 p-0 pt-3">
               <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+              <!--<img src="{{ userProfile.profilePhoto }}" class="rounded-circle profile-img"/>-->
           </div>
           <div class="col-11">
               
               <div class="md-form mb-2 row">
                   <div class="col-9">
-                      <input data-toggle="modal" data-target="#modalLoginForm" type="text" id="titleAff" [value]="titleValue" class="form-control-plaintext validate" placeholder="Project Title . . .">
+                      <div *ngIf="title.touched && title.invalid">
+                        <div *ngIf=title.errors.required class="font-weight-bold validation-str"> The title is required</div>
+                        <div *ngIf=title.errors.minlength class="font-weight-bold validation-str"> The title length is inadequate</div>
+                      </div>
+                      <input type="text" id="titleAff" [value]="titleValue" class="form-control-plaintext validate" placeholder="Project Title . . .">
                     </div>
-                  <div class="col-3 pt-2">
-                    <input type="checkbox" [checked]="finishedValue" style="font-size:82%;"> Finished
+                  <div data-toggle="modal" class="col-3 pt-2">
+                    <input data-toggle="modal" type="checkbox" [checked]="finishedValue" style="font-size:82%;"> Finished
                   </div>
               </div>
               <div class="md-form mb-2">
-                  <textarea  data-toggle="modal" data-target="#modalLoginForm" id="descriptionAff" [value]="descriptionValue" class="form-control-plaintext validate" placeholder="Description . . ."></textarea>
+                  <div *ngIf="description.touched && description.invalid">
+                      <div *ngIf=description.errors.required class="font-weight-bold validation-str"> The description is required</div>
+                      <div *ngIf=description.errors.minlength class="font-weight-bold validation-str"> The description length is inadequate</div>
+                  </div>
+                  <textarea  data-toggle="modal" id="descriptionAff" [value]="descriptionValue" class="form-control-plaintext validate" placeholder="Description . . ."></textarea>
               </div>
               <div class="row pl-3 mt-4 mb-0">
-                  <div data-toggle="modal" data-target="#modalLoginForm" class="btn btn-secondary btn-nrml ml-0">
+                  <div (click)="onChoose(1)" class="btn btn-secondary btn-nrml ml-0">
                       <img src="../../../../../assets/images/copy.png" class="btn-logo"/>
                       Copy
                   </div>
-                  <div data-toggle="modal" data-target="#modalLoginForm" class="btn btn-secondary btn-nrml ml-1">
+                  <div (click)="onChoose(2)" class="btn btn-secondary btn-nrml ml-1">
                       <img src="../../../../../assets/images/media.png" class="btn-logo"/>
                       Media
                   </div>
-                  <div data-toggle="modal" data-target="#modalLoginForm" class="btn btn-secondary btn-nrml ml-1">
+                  <div (click)="onChoose(3)" class="btn btn-secondary btn-nrml ml-1">
                       <img src="../../../../../assets/images/filter.png" class="btn-logo"/>
                       Criterias
                   </div>
