--- a/src/app/components/user-profile/update-profile/update-profile.component.html
+++ b/src/app/components/user-profile/update-profile/update-profile.component.html
@@ -2,32 +2,57 @@
     <div class="wrapper animated bounceInLeft">
         <div class="company-info">
             <h3>Profile Settings</h3>
-            <img  src="../../../../../assets/images/{{user.profilePhoto}}" formControlName="img" class="rounded-circle z-depth-0 img-taille">
-            <button class="full">Change photo</button>
+            <img  src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille">
+            <form [formGroup]="updatePhotoForm" (ngSubmit)="updatePhoto()">
+                <div class="tab-pane fade show active" id="p2">
+                    <div class="modal-header header p-1 pl-3" >
+                        <h6 class="modal-title font-weight-bold">Media</h6>
+                    </div>
+                    <div class="custom-file mb-3 fap-container file-container mt-4">
+                        <input (change)="onSelectedFile($event)" type="file" class="custom-file-input" id="customFile" name="filename">
+                        <label class="custom-file-label form-control-plaintext inputFile mt-2" for="customFile" data-browse="File">    {{ progress != undefined ? progress+' % ' : ' . . .' }}</label>
+                    </div> 
+                </div>
+                </form>
         </div>
+
+       
         <div class="contact">
             <h3>Update your infos:</h3>
             <form [formGroup]="updateForm" (ngSubmit)="update()">
+
                 <p>
-                    <label>First Name</label>
-                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="firstName form-control txt" value="{{user.firstName}}">
+                                        <label>First Name</label>
+                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="form-control" placeholder="{{user.firstName}}">
                 </p>
+
                 <p>
                     <label>Last Name</label>
-                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="lastName form-control txt" value="{{user.lastName}}" >
+                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="form-control" placeholder="{{user.lastName}}" >
                 </p>
                 
-                <p>
+                
+                <p>                    
                     <label>Phone number</label>
-                    <input type="text" class="txt" name="phone" formControlName="phone" class="phone form-control txt" value="{{user.tel}}">
+                    <input type="text" class="txt" name="tel" formControlName="tel" class="form-control" placeholder="{{user.tel}}">
                 </p>
-                <p>
-                    <label class="full">Bio</label>
-                    <textarea name="bio" class="txt" rows="5" formControlName="bio" class="bio form-control txt" value="{{user.bio}}" ></textarea>
-                </p>
-                <p>
-                    <button class="full">Submit</button>
-                </p>
+
+<p>
+           <label class="full">Location</label>
+                    <input type="text" name="location" class="txt" rows="5" formControlName="location" class="form-control" placeholder="{{user.bio}}" />
+   
+            </p>
+            <p>
+                    <label class="full">Facebook Link</label>
+                             <input type="text" name="url" class="txt" rows="5" formControlName="url" class="form-control" placeholder="{{user.bio}}" />
+                     </p>
+                     <p>
+                            <p>           
+                            <label class="full">BIO  </label>
+                           <input type="text" name="bio" class="txt" rows="5" formControlName="bio" class="form-control" placeholder="{{user.bio}}" />
+                            </p>
+                                      
+                                        <button  type="submit" class="full">Submit</button>
             </form>
         </div>
     </div>
